# pymc_prophet

./: .gitignore  README.md  environment.yaml  model_experiment.ipynb  notes.md  numpyro_example.py  nutpie_example.ipynb  nutpie_example.py  prophet_example.ipynb  pymc_prophet_example.ipynb  pyproject.toml  requirements.txt  ruff.toml  scratch_debug_m1_pymc.py  scratch_debug_make_holidays.ipynb  scratch_debug_predict.py  scratch_debug_prophet.py  scratch_holiday.ipynb  scratch_nuitpie.ipynb  scratch_prophet.ipynb  scratch_pymc_prophet_example.ipynb  scratch_pymc_prophet_full_example.ipynb  scratch_pymc_prophet_full_example_out_the_box.ipynb
pymcprophet/: __innit__.py  model.py  model_templates.py  new_model_templates.py
pymcprophet/utils/: make_holiday.py
scratch/: scratch_debug_m1_pymc.py  scratch_debug_predict.py  scratch_holiday.ipynb  scratch_pymc_prophet_full_example.ipynb
src/pymc_prophet/: __init__.py  bayes_model.py  model.py  model_config.py  prophet_model.py
src/pymc_prophet/utils/: make_holiday.py
