[project]
name = "pymc-prophet"
version = "0.1.0"
description = "Reimplementation of Facebook Prophet using PyMC"
readme = "README.md"
authors = [{ name = "Jake Baker", email = "bakej159.302@gmail.com" }]
requires-python = "~=3.11.11"
dependencies = [
    "holidays>=0.76",
    "numpy>=1.23.5",
    "pandas>=1.5.3",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
]


[project.scripts]
pymc-prophet = "pymc_prophet:main"

[project.optional-dependencies]
jupyter = ["jupyter>=1.1.1"]
bayes = ["arviz>=0.22.0", "pymc>=5.23.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 130
extend-select = ["I"]
