[project]
name = "pymc-prophet"
version = "0.1.0"
description = "Reimplementation of Facebook Prophet using PyMC"
readme = "README.md"
authors = [{ name = "Jake Baker", email = "bakej159.302@gmail.com" }]
requires-python = "~=3.11.11"
dependencies = [
    "holidays~=0.45",
    "numpy~=1.23.5",
    "pandas~=1.5.3",
    "plotly~=5.9.0",
    "pydantic>=2.11.7",
]


[project.scripts]
pymc-prophet = "pymc_prophet:main"

[project.optional-dependencies]
bayes = [
    "arviz>=0.21.0",
    "pymc>=5.19.0",
]
jupyter = [
    "jupyter>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 130
extend-select = ["I"]
